<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">1Sheeld</string>
    <string name="context_menu_clear_automatically_connecting_1sheeld_button">Clear Automatically Connecting 1Sheeld</string>
    <string name="context_menu_about_button">About</string>
    <string name="context_menu_app_tutorial_button">App Tutorial</string>
    <string name="general_toasts_bluetooth_was_not_enabled_toast">Bluetooth was not enabled</string>
    <string name="general_toasts_shields_selection_has_been_saved_toast">Shields selection has been saved</string>
    <string name="general_toasts_shields_selection_has_been_cleared_toast">Shields selection has been cleared</string>
    <string name="general_toasts_unable_to_connect_to_the_board_toast">Unable to connect to the board</string>
    <string name="general_toasts_device_doesnt_support_this_sensor_toast">Device doesn\'t support this sensor!</string>
    <string name="general_toasts_please_check_your_internet_connection_and_try_again_toast">Please check your Internet connection and try again.</string>
    <string name="general_toasts_received_an_unexpected_frame_toast">Received an unexpected frame</string>
    <string name="general_toasts_you_can_select_the_shield_now_toast">You can select the shield now.</string>
    <string name="connectivity_popup_no_devices_found">No devices found</string>
    <string name="connectivity_popup_not_connected">Not Connected</string>
    <string name="connectivity_popup_searching">Searching</string>
    <string name="connectivity_popup_connecting">Connecting</string>
    <string name="connectivity_popup_select_your_device">Select Your Device</string>
    <string name="connectivity_popup_scan_button">Scan</string>
    <string name="connectivity_popup_try_again_button">Try Again</string>
    <string name="connectivity_popup_connect_automatically_to_this_device_checkbox">Connect Automatically to This Device</string>
    <string name="connectivity_popup_dont_have_the_board_get_it_now">Don\'t have 1Sheeld board? get it from <a href="http://bit.ly/Buy1SheeldFromApp">our website</a> now!</string>
    <string name="connectivity_popup_dont_have_the_board_get_it_now_US">Don\'t have 1Sheeld board? get it from <a href="http://bit.ly/Buy1SheeldPlusAmazonFromApp">Amazon</a> now!</string>
    <string name="connectivity_popup_bluetooth_is_not_available_toast">Bluetooth is not available</string>
    <string name="connectivity_popup_scan_for_1sheeld">Scan for 1Sheeld</string>
    <string name="firmware_upgrade_popup_upgrade_firmware">Upgrade Firmware</string>
    <string name="firmware_upgrade_popup_upgrade_button">Upgrade</string>
    <string name="firmware_upgrade_popup_done_successfully">Done Successfully!</string>
    <string name="firmware_upgrade_popup_installing">Installing</string>
    <string name="firmware_upgrade_popup_an_error_occured">An error occurred!</string>
    <string name="firmware_upgrade_popup_1sheeld_not_responding">1Sheeld not responding!</string>
    <string name="firmware_upgrade_popup_downloading">Downloading</string>
    <string name="firmware_upgrade_popup_please_press_reset">Please, Press reset!</string>
    <string name="firmware_upgrade_popup_error_downloading">Error Downloading!</string>
    <string name="firmware_upgrade_popup_no_internet_connection">No Internet Connection</string>
    <string name="plugin_name" translatable="false">@string/app_name</string>
    <string name="shields_list_deselect_all_button">Deselect All</string>
    <string name="shields_list_remember_selection_button">Remember</string>
    <string name="shields_list_select_at_least_1_shield_toast">Select at least 1 shield</string>
    <string name="shields_list_please_connect_to_your_board_first">Please connect to your board first</string>
    <string name="sensors_axis_x_axis">X</string>
    <string name="sensors_axis_y_axis">Y</string>
    <string name="sensors_axis_z_axis">Z</string>
    <string name="sensors_units_centimeter">cm</string>
    <string name="sensors_units_meter_per_second_square">m/s2</string>
    <string name="sensors_units_rad_per_second">rad/s</string>
    <string name="sensors_units_lux">lx</string>
    <string name="sensors_units_micro_tesla">μT</string>
    <string name="sensors_units_hectopascal">hPa</string>
    <string name="sensors_units_degree">Degree</string>
    <string name="tutorial_go_button">I have 1Sheeld board</string>
    <string name="tutorial_demo_button">Get 1Sheeld board now!</string>
    <string name="tutorial_the_app_requires_1sheeld_board">The app requires 1Sheeld board! But you can explore the included shields without it.</string>
    <string name="tutorial_dont_show_this_tutorial_again">Don\'t show this tutorial again</string>
    <string name="tutorial_you_are_ready_to_go">You are\nready to go!</string>
    <string name="tutorial_for_more_tutorials_visit_our_website">For more tutorials visit our website\n<xliff:g id="_1sheeld_website">1Sheeld.com</xliff:g></string>
    <string name="tutorial_skip">Skip</string>
    <string name="rate_dialog_title">Did you like 1Sheeld?</string>
    <string name="rate_dialog_message">If you enjoy playing with 1Sheeld app, would you mind taking a moment to rate it? We appreciate your awesome support!</string>
    <string name="rate_dialog_ok">Now <xliff:g id="smiley">:-)</xliff:g></string>
    <string name="rate_dialog_cancel">Later <xliff:g id="smiley">:-|</xliff:g></string>
    <string name="rate_dialog_no">Never <xliff:g id="smiley">:-(</xliff:g></string>
    <string name="jodem_1sheeld_didnt_request_the_authentication_key">1Sheeld didn\'t request the authentication key!</string>
    <string name="jodem_send_error_expected_a_response_got_another_one">Send error, expected a response, got another one!</string>
    <string name="jodem_many_errors_happened_upgrading_aborted">Many errors happened, upgrading aborted!</string>
    <string name="jodem_protocol_error_upgrading_aborted">Protocol Error, upgrading aborted!</string>
    <string name="jodem_final_response_not_received_transfer_aborted">Final response not received, transfer aborted!</string>
    <string name="about_dialog_about_1sheeld">About 1Sheeld</string>
    <string name="about_dialog_developed_with_love_by_integreight_inc_team_in_cairo_egypt">Developed with love by Integreight, Inc. team in Cairo, Egypt.</string>
    <string name="about_dialog_if_you_have_any_question_please_visit_our_website_or_drop_us_an_email_on_info_integreight_com">If you have any question, please visit our website or drop us an email on <xliff:g id="_1sheeld_support_email">info@integreight.com</xliff:g></string>
    <string name="about_dialog_firmware_version">Firmware Version</string>
    <string name="about_dialog_app_version">App Version</string>
    <string name="about_dialog_app_was_last_updated_on">App was last updated on</string>
    <string name="about_dialog_if_you_are_interested_in_this_apps_source_code_please_visit_our_github_page_github_com_integreight">If you are interested in this app\'s source code, please visit our Github page: <xliff:g id="_1sheeld_github_page">github.com/integreight</xliff:g></string>
    <string name="about_dialog_okay">Okay!</string>
    <string name="connection_notification_connected_to">Connected to</string>
    <string name="connection_notification_1sheeld_is_connected">1Sheeld is connected!</string>
    <string name="firmware_upgrade_decision_dialog_optional_firmware_upgrade">Optional Firmware Upgrade</string>
    <string name="firmware_upgrade_decision_dialog_now_button">Now</string>
    <string name="firmware_upgrade_decision_dialog_not_now_button">Not Now</string>
    <string name="firmware_upgrade_decision_dialog_required_firmware_upgrade">Required Firmware Upgrade</string>
    <string name="firmware_upgrade_decision_dialog_start">Start</string>
    <string name="library_upgrade_dialog_arduino_library_update">Arduino Library Update</string>
    <string name="library_upgrade_dialog_theres_a_new_version_of_1sheelds_arduino_library_available_on_our_website">There\'s a new version of 1Sheeld\'s Arduino library available on our website!</string>
    <string name="library_upgrade_dialog_ok_button">OK</string>
    <string name="context_menu_tutorial_open_context_menu">Open Context Menu</string>
    <string name="context_menu_tutorial_upgrade_the_firmware_clear_the_automatic_connection_and_see_the_tutorial_again_after_opening_the_context_menu_by_clicking_on_1sheeld_logo">Upgrade the firmware, clear the automatic connection and see the tutorial again after opening the context menu by clicking on 1Sheeld logo.</string>
    <string name="main_activity_skip">Skip</string>
    <string name="main_activity_draw_over_apps_enabled_you_can_select_the_shield">Draw over apps enabled, you can select the shield.</string>
    <string name="main_activity_draw_over_apps_was_not_enabled">Draw over apps was not enabled!</string>
    <string name="main_activity_bluetooth_scan_needs_location_permission">Bluetooth scan needs location permission.</string>
    <string name="main_activity_allow_button">Allow</string>
    <string name="main_activity_deny_button">Deny</string>
    <string name="main_activity_location_permission_denied">Location permission denied.</string>
    <string name="main_activity_please_turn_on_location_permission">Please turn on location permission.</string>
    <string name="main_activity_this_shield_needs_some_permissions">This shield needs some permissions.</string>
    <string name="main_activity_your_device_didnt_allow_this_shield_permissions">Your device didn\'t allow this shield permissions.</string>
    <string name="accelerometer_shield_name">Accelerometer</string>
    <string name="buzzer_shield_name">Buzzer</string>
    <string name="buzzer_press_required_tone">Press Required Tone</string>
    <string name="buzzer_pin_name">Buzzer</string>
    <string name="buzzer_an_error_occurred_cant_buzz_toast">An error occurred, can\'t buzz!</string>
    <string name="camera_shield_name">Camera</string>
    <string name="camera_your_picture_has_been_taken_toast">Your picture has been taken!</string>
    <string name="camera_your_device_doesnt_have_a_front_camera_toast">Your device doesn\'t have a front camera!</string>
    <string name="camera_camera_is_not_available_toast">Camera is not available!</string>
    <string name="camera_your_device_doesnt_have_a_camera_toast">Your device doesn\'t have a camera!</string>
    <string name="camera_image_not_found_toast">Image not found</string>
    <string name="camera_camera_is_unavailable_maybe_its_used_by_another_application_toast">Camera is unavailable, maybe it\'s used by another application!</string>
    <string name="camera_we_need_you_to_enable_the_draw_over_apps_permission_in_order_to_show_the_camera_preview_correctly">We need you to enable the draw over apps permission in order to show the camera preview correctly.</string>
    <string name="camera_validation_dialog_ok_button">Ok</string>
    <string name="camera_validation_dialog_later_button">later</string>
    <string name="camera_please_enable_the_permission_to_be_able_to_select_this_shield_toast">Please enable the permission to be able to select this shield</string>
    <string name="clock_shield_name">Clock</string>
    <string name="clock_time">Time</string>
    <string name="terminal_send_button">Send</string>
    <string name="terminal_ascii_button">ASCII</string>
    <string name="terminal_decimal_button">DEC</string>
    <string name="terminal_binary_button">Binary</string>
    <string name="terminal_hex_button">Hex</string>
    <string name="terminal_copy_all_button">Copy All</string>
    <string name="terminal_time_on_button">Time ON</string>
    <string name="terminal_time_off_button">Time OFF</string>
    <string name="terminal_auto_scroll_off_button">Auto-Scroll OFF</string>
    <string name="terminal_auto_scroll_on_button">Auto-Scroll ON</string>
</resources>