<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_menu_clear_automatically_connecting_1sheeld_button" />
    <item
        android:id="@+id/open_bootloader_popup"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/firmware_upgrade_popup_upgrade_firmware" />
    <item
        android:id="@+id/appTutorial"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_menu_app_tutorial_button" />
    <item
        android:id="@+id/aboutDialogButton"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_menu_about_button" />

</menu>