<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1000000"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/oneSheeldLogoUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:src="@drawable/arduino_connectivity_activity_onesheeld_logo" />

    <RelativeLayout
        android:id="@+id/initTransContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.integreight.onesheeld.utils.customviews.OneSheeldButton
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_button_selector"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/firmware_upgrade_popup_upgrade_button"
            android:textColor="@drawable/white_black_text_selector"
            android:textSize="22sp"
            android:typeface="sans" />

        <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
            android:id="@+id/progressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="invisible" />

        <com.integreight.onesheeld.utils.customviews.CircularProgressBar
            android:id="@+id/progressDownloading"
            style="@style/Widget.ProgressBar.Holo.CircularProgressBar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            app:progressColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressUpdating"
            style="@android:style/Widget.ProgressBar.Large.Inverse"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/my_progress_indeterminate"
            android:visibility="invisible"></ProgressBar>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/transactionSloganUpdating"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#0094c1"
        android:orientation="vertical">

        <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
            android:id="@+id/updateStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/firmware_upgrade_popup_upgrade_firmware"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:typeface="sans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/arduino_connectivity_activity_integreight_logo" />
    </RelativeLayout>

</LinearLayout>